# multi-agent-hub

./: .env.example  .gitignore  Dockerfile  README.md  all_stories.json  all_story_details.json  crawl_company_url.py  docker-compose.yaml  langgraph.json  pyproject.toml  settings.py  test.ipynb  test.json  test_api.py  test_query.py  test_rag.py
.test/: check_record.py  get_all_response.py  test_api.py
app/core/: llm.py  settings.py
app/helpers/: content_filtering.py  content_filttering.py  extract_insight.py  get_brand_guidelines.py  library_helpers.py  rag_core.py
app/schemas/: models.py  settings.py
app/workflows/chat_agent_ec2/: agent.py
app/workflows/chat_agent_ec2/utils/: nodes.py  schema.py  state.py  system_prompts.py  template_prompts.py  tools.py
app/workflows/eb_form_chat/: agents.py  main_graph.py  mapping_task.py
app/workflows/employer_branding/: agent.py
app/workflows/employer_branding/utils/: system_prompts.py  tools.py
app/workflows/employer_branding_company/: agent.py
app/workflows/employer_branding_company/test/: simulated_user.py  test_eb_company.py  testcase.csv  testcase.py
app/workflows/employer_branding_company/unit_test/: clone_requirement.py  dataset.py  evaluator.py  llm_caller.py  testcase_unit_generate.csv  testcase_unit_transform.csv
app/workflows/employer_branding_company/utils/: nodes.py  state.py  system_prompts.py  template_prompts.py  tools.py
app/workflows/employer_branding_mvp/: agent.py
app/workflows/employer_branding_mvp/test/: evaluator.py  simulated_user.py  test_simple.py  testcase.py
app/workflows/employer_branding_mvp/utils/: system_prompts.py  tools.py
app/workflows/employer_branding_v3/: agent.py
app/workflows/employer_branding_v3/utils/: system_prompts.py
app/workflows/find/: agent.py
app/workflows/find/utils/: constant.py  nodes.py  state.py  system_prompts.py  tools.py
app/workflows/react_agent/: agent.py  configuration.py
app/workflows/react_agent/utils/: tools.py
app/workflows/talent_acquisition/: agent.py
app/workflows/talent_acquisition/utils/: system_prompts.py
environment/: .env.example
