[project]
name = "the-martec-multi-agent-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "langchain-openai==0.3.8",
    "python-dotenv==1.0.1",
    "langchain==0.3.25",
    "langgraph==0.4.1",
    "langgraph-cli[inmem]==0.1.0",
    "pydantic-settings==2.1.0",
    "langchain-posgres==0.0.14",
    "youtube-transcript-api==1.0.3"
]

[dependency-groups]
dev = [
    "alembic>=1.15.1",
    "faker>=37.0.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
[tool.ruff.lint]
ignore = ["E402"]

[tool.setuptools]
packages = ["app", "environment"]
